src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__emulator_harness__internal.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
ready[m
go[m
[38;2;255;128;0;1mformatted[m
line-01[m
line-02[m
line-03[m
line-04[m
line-05[m
line-06[m
line-07[m
line-08[m
line-09[m
line-10[m
line-11[m
line-12[m
line-13[m
line-14[m
line-15[m
line-16[m
line-17[m
line-18[m
line-19[m
line-20[m
line-21[m
line-22[m
line-23[m
line-24[m
line-25[m
line-26[m
line-27[m
line-28[m
line-29[m
line-30[m
[m
