src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__emulator_harness__zellij.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
[mready
[mgo
[38;2;255;128;0m[49m[29m[28m[27m[25m[25m[1m[24m[22m[1m[23mformatted
[mline-01
[mline-02
[mline-03
[mline-04
[mline-05
[mline-06
[mline-07[m
[mline-08
[mline-09
[mline-10
[mline-11
[mline-12
[mline-13
[mline-14
[mline-15
[mline-16
[mline-17
[mline-18
[mline-19
[mline-20
[mline-21
[mline-22
[mline-23
[mline-24
[mline-25
[mline-26
[mline-27
[mline-28
[mline-29
[mline-30
[m
